fix(group): apply flex wrap for group when `gap` is defined

--- a/packages/react/src/group/src/styles/index.module.scss
+++ b/packages/react/src/group/src/styles/index.module.scss
@@ -6,12 +6,17 @@
 @include theme.scope($group-root) {
   display: inline-flex;
   gap: theme.get-var(gap);
+  align-items: center;
 
   @include theme.define-var(
     (
       border-radius: theme.get-var(radius)
     )
   );
+
+  &:not(&--gap-none) {
+    flex-wrap: wrap;
+  }
 
   &:where(&--gap-none) {
     :not(:first-child) {
